fix: added scrollbar

--- a/src/scroll-bar.scss
+++ b/src/scroll-bar.scss
@@ -1,6 +1,6 @@
 /* width */
 ::-webkit-scrollbar {
-  width: 0px;
+  width: 5px;
   height: 0;
 }
 
